<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">雪亮工程</string>
    <string name="version">V1.0</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logo_name">OPENNETSYSTEM</string>
    <string name="menu_name">OpenNetSystem</string>
    <string name="system">for android</string>
    <string name="login">登  陆</string>
    <string name="setting">设置</string>
    <string name="username">用户名</string>
    <string name="password">密                码</string>
    <string name="ipaddr">IP地址</string>
    <string name="MENU_EXIT">退出</string>
    <string name="MENU_ABOUT">关于</string>
    <string name="aboutInfo">制作人:zhoujj \n本应用为测试应用,扩展性较高!</string>
    <string name="ok_label">确认</string>
    <string name="sure">确定</string>
    <string name="saving">保存</string>
    <string name="server">服务器</string>
    <string name="url">URL</string>
    <string name="remember">记住密码</string>
    <string name="change_password">修改密码</string>
    <string name="about">关于我们</string>
    <string name="web_config">网页设置</string>
    <string name="quit">退出程序</string>
    <string name="current_pass">当前密码</string>
    <string name="new_pass">新密码</string>
    <string name="sure_new_pass">确认新密码</string>
    <string name="autologin">自动登录</string>
    <string name="menu">菜单</string>
    <string name="map">地图</string>
    <string name="list">列表</string>
    <string name="about_string">关于</string>
    <string name="video_list">摄像机列表</string>
    <string name="real_video">实时画面</string>
    <string name="remote_play">远程回放</string>
    <string name="alarm">报警</string>
    <string name="local_save">本地存储</string>
    <string name="return_list">回到列表</string>
    <string name="back">返回</string>
    <string name="web">网页</string>

</resources>
