<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/beijing"
                tools:context=".SplashActivity">

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <View
            android:id="@+id/ip_config"
            android:layout_width="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_height="40dp"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:scaleX="1.2"
            android:text="OpenNetSystem"
            android:textColor="#ed6920"
            android:textSize="36dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="right"
            android:text="for android"
            android:textColor="#cfcfcf"
            android:textSize="32dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ip_layout"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:layout_gravity="center"
                    android:addStatesFromChildren="true"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_ip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/connecticon">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/server"
                        android:textColor="@color/text_color"
                        android:textSize="24dp">
                    </TextView>

                    <EditText
                        android:id="@+id/ipaddr"
                        style="?android:attr/textViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="0.36"
                        android:background="@null"
                        android:textSize="18dp">
                    </EditText>

                    <ImageButton
                        android:id="@+id/xuanze_ip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/xuanze">
                    </ImageButton>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/username_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:addStatesFromChildren="true"
                    android:background="@drawable/bg_ip_style"
                    android:orientation="horizontal">
                    <!--android:background="@drawable/bg_username_style"-->

                    <ImageView
                        android:id="@+id/iv_usename"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/usericon"
                        android:visibility="gone">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/username"
                        android:textColor="@color/text_color"
                        android:textSize="18dp">
                    </TextView>

                    <EditText
                        android:id="@+id/username"
                        style="?android:attr/textViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="0.36"
                        android:background="@null"
                        android:textSize="18dp">
                    </EditText>

                    <ImageButton
                        android:id="@+id/xuanze_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/xuanze"
                        android:visibility="gone">
                    </ImageButton>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:addStatesFromChildren="true"
                    android:background="@drawable/bg_passpord_style"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_password"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/passwordicon"
                        android:visibility="gone">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center_vertical"
                        android:text="密    码"
                        android:textColor="@color/text_color"
                        android:textSize="18dp">
                    </TextView>

                    <EditText
                        android:id="@+id/password"
                        style="?android:attr/textViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="0.36"
                        android:background="@null"
                        android:inputType="textPassword"
                        android:textSize="18dp">
                    </EditText>

                    <ImageButton
                        android:id="@+id/xuanze_passowrd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="8dp"
                        android:background="@drawable/xuanze"
                        android:visibility="gone">
                    </ImageButton>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/checkbox_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <CheckBox
                        android:id="@+id/remember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="4dp"
                        android:gravity="left|center_vertical">
                    </CheckBox>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/remember"
                        android:textColor="#ffffff"
                        android:textSize="16dp"/>


                    <CheckBox
                        android:id="@+id/autologin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginLeft="10dp"
                        android:gravity="left|center_vertical">
                    </CheckBox>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="4dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/autologin"
                        android:textColor="#ffffff"
                        android:textSize="16dp">
                    </TextView>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/login_button_image"
                    android:text="@string/login"
                    android:textColor="@drawable/button_font_style"
                    android:textSize="18dp"/>
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/init_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bg_2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="正在初始化..."
            android:textColor="@color/white"
            android:textSize="30sp"/>
    </RelativeLayout>


</RelativeLayout>